--- a/RAAMEN/View/Master Site/Admin.Master
+++ b/RAAMEN/View/Master Site/Admin.Master
@@ -17,6 +17,9 @@
                     <asp:Button ID="ManageRamen" runat="server" Text="Manage Ramen" OnClick="ManageRamen_Click" />
                     <asp:Button ID="logout" runat="server" Text="Logout" onclick="logout_Click" style="margin-left: 10px;"/>
                     <asp:Button ID="profile" runat="server" Text="Profile" onclick="profile_Click" style="margin-left: 10px;"/>
+                  
+                    <asp:Button ID="queue" runat="server" Text="Order Queue" OnClick="queue_Click" style="margin-left: 10px;"/>
+                    <asp:Button ID="history" runat="server" Text="Transaction History" OnClick="history_Click" style="margin-left: 10px;"/>
                 </div>
         </div>
 
